--- a/index.html
+++ b/index.html
@@ -44,11 +44,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Baba Abdo Restaurant - Authentic Flavors & Family Meals</title>
-  <meta name="description" content="Enjoy the finest crepes, sandwiches, shawarma, grills, and broasted chicken at Baba Abdo. Visit our branches or order now for a delicious experience!">
+  <title>مطعم بابا عبده | Baba Abdo Restaurant | مطاعم بابا عبده | بابا عبده | مطعم باب الشعريه | مطعم باب الفتوح | مطعم كبده و سجق | كبده | سجق | Shawarma | Grills | Crepes | Sandwiches | Broasted | باب الفتوح | باب الشعريه | El Banhawy - Bab El Fetouh | Bab El Sha'aria | Midan El Geish</title>
+  <meta name="description" content="مطعم بابا عبده يقدم أشهى الكبدة والسجق والشاورما والمشويات والكريب والسندوتشات في باب الفتوح وباب الشعريه وميدان الجيش. Baba Abdo Restaurant serves the best liver, sausage, shawarma, grills, crepes, and sandwiches in Bab El Fetouh, Bab El Sha'aria, and Midan El Geish. Authentic Egyptian street food and family meals since 1990.">
+  <meta name="keywords" content="مطعم بابا عبده, مطاعم بابا عبده, بابا عبده, مطعم باب الشعريه, مطعم باب الفتوح, مطعم كبده و سجق, كبده, سجق, شاورما, مشويات, كريب, سندوتشات, باب الفتوح, باب الشعريه, ميدان الجيش, Baba Abdo, Baba Abdo Restaurant, Bab El Fetouh, Bab El Sha'aria, Midan El Geish, liver, sausage, shawarma, grills, crepes, sandwiches, Egyptian food, family meals, best restaurant Cairo, مطعم عائلي, توصيل, دليفري, Baba Abdo Egypt, Baba Abdo menu, Baba Abdo delivery, Baba Abdo locations, Baba Abdo contact, Baba Abdo كبده, Baba Abdo سجق, Baba Abdo شاورما, Baba Abdo مشويات, Baba Abdo كريب, Baba Abdo سندوتشات, Baba Abdo باب الفتوح, Baba Abdo باب الشعريه, Baba Abdo ميدان الجيش, رقم بابا عبده شارع المعز, رقم تليفون بابا عبده باب الشعرية, منيو بابا عبده باب الشعرية, منيو بابا عبده باب الفتوح, منيو بابا عبده باب الشعرية 2024, منيو بابا عبده شارع المعز, مطعم بابا عبده باب الفتوح باب الشعرية, منيو بابا عبده ميدان الجيش">
+  <meta property="og:title" content="مطعم بابا عبده | Baba Abdo Restaurant | مطاعم بابا عبده | بابا عبده" />
+  <meta property="og:description" content="مطعم بابا عبده يقدم أشهى الكبدة والسجق والشاورما والمشويات والكريب والسندوتشات في باب الفتوح وباب الشعريه وميدان الجيش. Baba Abdo Restaurant serves the best liver, sausage, shawarma, grills, crepes, and sandwiches in Bab El Fetouh, Bab El Sha'aria, and Midan El Geish." />
+  <meta property="og:locale" content="ar_AR" />
+  <meta property="og:site_name" content="مطعم بابا عبده | Baba Abdo Restaurant" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="مطعم بابا عبده | Baba Abdo Restaurant" />
+  <meta name="twitter:description" content="مطعم بابا عبده يقدم أشهى الكبدة والسجق والشاورما والمشويات والكريب والسندوتشات في باب الفتوح وباب الشعريه وميدان الجيش. Baba Abdo Restaurant serves the best liver, sausage, shawarma, grills, crepes, and sandwiches in Bab El Fetouh, Bab El Sha'aria, and Midan El Geish." />
+  <meta name="twitter:image" content="b3-logo.png" />
   <link rel="canonical" href="https://yourdomain.com/" />
-  <meta property="og:title" content="Baba Abdo Restaurant - Authentic Flavors & Family Meals" />
-  <meta property="og:description" content="Enjoy the finest crepes, sandwiches, shawarma, grills, and broasted chicken at Baba Abdo. Visit our branches or order now for a delicious experience!" />
   <meta property="og:image" content="b3-logo.png" />
   <meta property="og:type" content="website" />
   <script src="https://cdn.tailwindcss.com"></script>
